--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@studio-freight/lenis": "^1.0.42",
+    "@tabler/icons-react": "^3.31.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
