--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.2",
     "three": "^0.174.0",
     "three-globe": "^2.42.3",
