--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@types/axios": "^0.9.36",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
